fix mfa alignment

--- a/internal/ui/login/static/resources/themes/scss/styles/container/container.scss
+++ b/internal/ui/login/static/resources/themes/scss/styles/container/container.scss
@@ -107,6 +107,16 @@ $lgn-container-bottom-margin: 50px;
         display: flex;
         flex-direction: column;
     }
+
+    .lgn-mfa-other {
+        display: flex;
+        flex-direction: column;
+        
+        button {
+            width: 100%;
+            margin: .5rem 0;
+        }
+    }
 }
 
 i {
